<resources>
    <string name="app_name">Bored Chat</string>
    <string name="username_hint">Username</string>
    <string name="mail_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="read">Read</string>
    <string name="Error_fileds">All fileds are required</string>
    <string name="Password_error">password must be at least 6 characters</string>
    <string name="User">User</string>
    <string name="id">id</string>
    <string name="Username_small">username</string>
    <string name="imageUrl">imageURL</string>
    <string name="Default_settings">default</string>
    <string name="email_password_error">You can\'t register with this email or password</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">hello</string>
    <string name="send_message_button">Send Message button</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="Widget_text">You must be bored Click here to Chat</string>
    <string name="upload">Uploading...</string>
    <string name="failed">Failed!</string>
    <string name="no_image">No image selected</string>
    <string name="upload_prog">Upload in preogress</string>
    <string name="auth_fail">Auth failed</string>
    <string name="random_user_from_your_list">Random user from your List:</string>
</resources>
